Influencers > Facebook page : View by Country/Cities drop down was not showing correctly in responsive design. So table design fixed

--- a/app/assets/stylesheets/campaigns.css
+++ b/app/assets/stylesheets/campaigns.css
@@ -358,6 +358,24 @@ only screen and (max-width: 560px) {
         left: -9999px;
     }
 
+    .statistic-table thead tr {
+        position: inherit;
+        top: 0;
+        left: 0;
+    }
+
+    .statistic-table thead th:nth-child(n+2) {
+        display: none;
+    }
+
+    .statistic-table thead th:nth-child(1) {
+        display: block;
+    }
+
+    .statistic-table tbody tr td {
+        padding-left: 10px;
+    }
+
     .performance_table th:nth-child(1), .performance_table td:nth-child(1), .engagement_table th:nth-child(1), .engagement_table td:nth-child(1) {
         text-align: center ;
         width: auto;
@@ -410,6 +428,11 @@ only screen and (max-width: 560px) {
     .brand_campaign_engagement_table > tbody > tr > td:nth-of-type(2):before { content: "Likes : ";  font-weight: bold; }
     .brand_campaign_engagement_table > tbody > tr > td:nth-of-type(3):before { content: "Comments : ";  font-weight: bold; }
     .brand_campaign_engagement_table > tbody > tr > td:nth-of-type(4):before { content: "Shares: ";  font-weight: bold; }
+
+    .statistic-table > tbody > tr > td:nth-of-type(1):before { content: "Country/City : "; font-weight: bold; }
+    .statistic-table > tbody > tr > td:nth-of-type(2):before { content: "Likes : ";  font-weight: bold; }
+    .statistic-table > tbody > tr > td:nth-of-type(3):before { content: "Post Reach : ";  font-weight: bold; }
+
 }
 
 .campaign-content {
